# smart-playlist-generation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.sh
src/smart_playlist_generation/: main.py
src/smart_playlist_generation/feature_generation/: __init__.py  generators.py
src/smart_playlist_generation/feature_processors/: __init__.py  processors.py
src/smart_playlist_generation/optimizers/: __init__.py  optimize.py
src/smart_playlist_generation/utils/: __init__.py  extraction_utils.py  io_utils.py
